tests/baselines/reference/iterableArrayPattern1.errors.txt
tests/cases/conformance/es6/destructuring/iterableArrayPattern1.ts(14,5): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/destructuring/iterableArrayPattern1.ts (1 errors) ====
    class SymbolIterator {
        next() {
            return {
                value: Symbol(),
                done: false
            };
        }
    
        [Symbol.iterator]() {
            return this;
        }
    }
    
    var [a, b] = new SymbolIterator;
        ~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.